# ecms-automation

./: LICENSE  README.md  ecms.ipynb  pyproject.toml
ecms-co2-kit/src/: main.cpp
src/: pump_controller.py
src/robot_controller/: co2_controller.py
ur_controller/: .gitignore  AutomateCapex.py  AutomateCapex_extrinsic.py  LICENSE  README.MD  config.py  main.py  pyproject.toml  robot.py  robotiq_gripper.py  target_positions.json  utils.py  visualize.py
ur_controller/calibration/: RobotCalibration.py  calibration_from_data.py  calibration_from_input.py  calibration_main.py  robot_base_p.pkl  save_calibration_data.py  world_base_p_prime.pkl
ur_controller/typings/: rtde_control.pyi  rtde_io.pyi  rtde_receive.pyi
