[tool.poetry]
name = "ur_controller"
version = "1.1.0"
description = "Personal UR controller."
authors = ["Haegu Lee"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = ">=1.26.0,<1.27.0"  # Restrict to compatible version
numpy_quaternion = "==2023.0.3"
pytest = "==8.3.2"
pdoc = "==14.6.1"
spatialmath-python = "==1.1.9"
glfw = "==2.7.0"
pandas= "==2.2.2"
ur_rtde = "==1.5.9"
pyqt6 = "^6.8.0"
transform3d = "^1.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
